--- a/cuk/scss/main.css
+++ b/cuk/scss/main.css
@@ -501,6 +501,7 @@ body.scroll-up .nav-wrapper.fix-bottom {
   color: #fff;
   line-height: 1.5;
   letter-spacing: -0.5px;
+  -webkit-text-fill-color: #fff;
 }
 
 .banner-wrapper .mid-banner > em {
