--- a/cuk/scss/main.scss
+++ b/cuk/scss/main.scss
@@ -406,6 +406,7 @@ body {
             display: block;
             margin-bottom: 15px;
             @include font-style(48px, #fff, 500);
+            -webkit-text-fill-color: #fff;
         }
         > em {
             display: block;
