--- a/cuk/scss/common.scss
+++ b/cuk/scss/common.scss
@@ -2087,6 +2087,9 @@ footer {
         .table-style02,
         .table-style03 {
             overflow-x: visible;
+            &::-webkit-scrollbar-thumb {
+                background: #999;
+            }
             table {
                 width: auto;
             }
