--- a/cuk/scss/sub.css
+++ b/cuk/scss/sub.css
@@ -1388,14 +1388,6 @@ h5 {
   background-position: center center;
 }
 
-.table-style01::-webkit-scrollbar-thumb,
-.table-style02::-webkit-scrollbar-thumb,
-.table-style03::-webkit-scrollbar-thumb,
-.table-style-univ::-webkit-scrollbar-thumb,
-.table-form::-webkit-scrollbar-thumb {
-  background: #999;
-}
-
 .dot--magenta {
   position: relative;
   display: inline-block;
@@ -2076,20 +2068,22 @@ span.exclam.in-li--l {
 
 .step-list .step-item .step-item-container .step-card {
   position: absolute;
-  display: table;
+  display: block;
   top: 0;
   left: 0;
   bottom: 0;
   width: 150px;
   height: 100%;
-  vertical-align: middle;
   background: #f5f5f5;
 }
 
 .step-list .step-item .step-item-container .step-card .tb-cell {
-  display: table-cell;
-  height: 100%;
-  vertical-align: middle;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: block;
+  height: auto;
 }
 
 .step-list .step-item .step-item-container .step-card .tb-cell span {
