--- a/cuk/scss/sub.css
+++ b/cuk/scss/sub.css
@@ -2022,6 +2022,7 @@ span.exclam.in-li--l {
   z-index: 2;
   text-align: center;
   vertical-align: middle;
+  word-break: keep-all;
 }
 
 .tab--bd-bk li:hover:before {
@@ -4519,6 +4520,7 @@ input[type="checkbox"]:checked + label {
   display: none;
   width: 40px;
   height: 40px;
+  z-index: 3;
   background: #a70638 url("../img/common/lnb_arrT_white.png") no-repeat;
   background-size: auto 8px;
   background-position: center center;
@@ -6042,7 +6044,7 @@ input[type="checkbox"]:checked + label {
     left: 6px;
   }
   .toggle-list li .answer-wrapper {
-    padding: 20px 45px 20px 50px;
+    padding: 20px 20px 20px 50px;
   }
   .toggle-list li .answer-wrapper p {
     font-size: 14px;
