--- a/cuk/scss/common.css
+++ b/cuk/scss/common.css
@@ -17,6 +17,8 @@ body {
 
 body.pop-open {
   overflow: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
 }
 
 body.pop-open.scroll-down header {
